--- a/AutoCaption.csproj
+++ b/AutoCaption.csproj
@@ -80,7 +80,7 @@
     <Compile Include="ISpeechRecognizer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WindowsSpeechRecognizer.cs" />
+    <Compile Include="Recognizers\WindowsSpeechRecognizer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
